<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.susie.oh</groupId>
	<artifactId>oh-susie</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>oh-susie</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-compiler-source>1.8</maven-compiler-source>
		<maven-compiler-target>1.8</maven-compiler-target>
		<maven-compiler-plugin-version>3.2</maven-compiler-plugin-version>
		<scala-maven-plugin-version>3.1.0</scala-maven-plugin-version>
		<scala.version>2.11.5</scala.version>
		<scala.suffix>_2.11</scala.suffix>
		<spark.version>2.3.0</spark.version>
		<sonar.language>scala</sonar.language>
		<sonar.scoverage.reportPath>${project.build.directory}/scoverage.xml</sonar.scoverage.reportPath>
		<scoverage.plugin.version>1.1.1</scoverage.plugin.version>
		<akka.http.version>10.0.13</akka.http.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.scala-incubator.io</groupId>
			<artifactId>scala-io-file${scala.suffix}</artifactId>
			<version>0.4.3-1</version>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.25</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>23.6-jre</version>
		</dependency>
		
		<dependency>
		    <groupId>com.typesafe.akka</groupId>
		    <artifactId>akka-http${scala.suffix}</artifactId>
		    <version>${akka.http.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>com.typesafe.akka</groupId>
		    <artifactId>akka-http-spray-json${scala.suffix}</artifactId>
		    <version>${akka.http.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-sql${scala.suffix}</artifactId>
		    <version>${spark.version}</version>
		</dependency>
		
		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.scalatest</groupId>
			<artifactId>scalatest${scala.suffix}</artifactId>
			<version>2.2.6</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<!-- make sure wrong scala version is not pulled in -->
					<groupId>org.scala-lang</groupId>
					<artifactId>scala-library</artifactId>
				</exclusion>

			</exclusions>
		</dependency>


	</dependencies>

	<build>

		<resources>
			<resource>
				<directory>${project.basedir}/src/main/scala</directory>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/java</directory>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>scala-maven-plugin</artifactId>
					<version>${scala-maven-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin-version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-test-compile</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>

				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>

				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.scalatest</groupId>
				<artifactId>scalatest-maven-plugin</artifactId>
				<version>1.0</version>
				<configuration>
					<stdout>W</stdout>  <!-- Skip coloring output -->
					<encoding>UTF-8</encoding>
					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
					<argLine>-Xms1024m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m
						-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps</argLine>
					<junitxml>.</junitxml>
					<filereports>WDF TestSuite.txt</filereports>
				</configuration>
				<executions>
					<execution>
						<id>test</id>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<excludes>
						<exclude>**/main/src/resources/application.conf</exclude>
						<exclude>*/application.conf</exclude>
						<exclude>application.conf</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.scoverage</groupId>
				<artifactId>scalac-scoverage-plugin_2.10</artifactId>
				<version>${scoverage.plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.scoverage</groupId>
				<artifactId>scoverage-maven-plugin</artifactId>
				<version>${scoverage.plugin.version}</version>
			</plugin>
		</plugins>
	</build>

</project>
